testsuite/tests/misc/invalid_static_expr/invalid_name.lkt
import common

@repr_name(no_such_entity)
class FooNode implements Node[FooNode] {
}
